crates/nerve-core/tests/snapshots/golden_navigate_ast__golden_ast_edit.snap
---
source: crates/nerve-core/tests/golden_navigate_ast.rs
expression: "json!({ \"no_match\": no_match, \"pattern_edit\": edited, })"
---
{
  "no_match": {
    "content": [
      {
        "text": "ast_edit: no matches in sample.rs\n",
        "type": "text"
      }
    ],
    "structuredContent": {
      "path": "sample.rs",
      "rewrites": 0
    }
  },
  "pattern_edit": {
    "content": [
      {
        "text": "ast_edit sample.rs\n\n--- a/sample.rs\n+++ b/sample.rs\n@@ -1,5 +1,5 @@\n fn main() {\n-foo(1);\n+baz(1);\n bar(2);\n }\n \n",
        "type": "text"
      }
    ],
    "structuredContent": {
      "files": [
        {
          "action": "ast_edit",
          "diff": "--- a/sample.rs\n+++ b/sample.rs\n@@ -1,5 +1,5 @@\n fn main() {\n-foo(1);\n+baz(1);\n bar(2);\n }\n \n",
          "path": "sample.rs",
          "tag": "B661",
          "view": "[sample.rs#B661]\n1:fn main() {\n2:baz(1);\n3:bar(2);\n4:}\n5:\n6:fn foo(x: i32) {}\n7:fn bar(x: i32) {}\n"
        }
      ]
    }
  }
}
